--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
 		<div class="col">
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			  <div class="container-fluid">
+			  <img class="resim1"src="keskinhotel.jpg">
 				<a class="navbar-brand" href="#">Keskin Hotel</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				  <span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				  <div class="navbar-nav">
-					<a class="nav-link active" aria-current="page" href="#">Anasayfa</a>
-					<a class="nav-link" href="#">Hakkımızda</a>
-					<a class="nav-link" href="#">Odalar</a>
-					<a class="nav-link" href="#">Galeri</a>
-					<a class="nav-link disabled">İletişim</a>
+					<a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
+					<a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
+					<a class="nav-link" href="odalar.html">Odalar</a>
+					<a class="nav-link" href="galeri.html">Galeri</a>
+					<a class="nav-link" href="iletisim.html">İletişim</a>
+					
 				  </div>
 				</div>
 			  </div>
@@ -58,11 +60,11 @@ Dünyanın cenneti Dalyan'da harika bir tatil sizi bekliyor. Yeşil ve mavinin d
 	  <div class="row">
 	  <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Anasayfa</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Hakkımızda</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Odalar</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Galeri</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">İletişim</a></li>
+      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Anasayfa</a></li>
+      <li class="nav-item"><a href="hakkimizda.html" class="nav-link px-2 text-muted">Hakkımızda</a></li>
+      <li class="nav-item"><a href="odalar.html" class="nav-link px-2 text-muted">Odalar</a></li>
+      <li class="nav-item"><a href="galeri.html" class="nav-link px-2 text-muted">Galeri</a></li>
+      <li class="nav-item"><a href="iletişim.html" class="nav-link px-2 text-muted">İletişim</a></li>
     </ul>
     <p class="text-center text-muted">Copyright © 2021 Tüm Hakları Saklıdır.
 </p>
