--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<div class="col">
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			  <div class="container-fluid">
-			  <img class="resim1"src="keskinhotel.jpg">
-				<a class="navbar-brand" href="#">Keskin Hotel</a>
+			  <img class="resim1"src="Anasayfa/keskinhotel.jpg">
+				<a class="navbar-brand" href="index.html">Keskin Hotel</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				  <span class="navbar-toggler-icon"></span>
 				</button>
@@ -38,9 +38,11 @@
 		</div>
 	  </div>
 	  
+	  
+	  
 	  <div class="row">
 		<div class="col-12 baslikresmi">
-			<img id="resim2" src="hotel.jpg">
+			<img id="resim2" src="Anasayfa/hotel.jpg">
 
 		</div>
 	  </div>
