--- a/odalar.html
+++ b/odalar.html
@@ -19,8 +19,8 @@
 		<div class="col">
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			  <div class="container-fluid">
-			  <img class="resim1"src="keskinhotel.jpg">
-				<a class="navbar-brand" href="#">Keskin Hotel</a>
+			  <img class="resim1"src="Anasayfa/keskinhotel.jpg">
+				<a class="navbar-brand" href="index.html">Keskin Hotel</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				  <span class="navbar-toggler-icon"></span>
 				</button>
@@ -38,6 +38,20 @@
 			</nav>
 		</div>
 	  </div>
+	  
+	  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+
+
+
+<div class="container">
+    <ol class="breadcrumb breadcrumb-arrow">
+		<li><a href="index.html">Ana Sayfa</a></li>
+		<li class="active"><span>Odalar</span></li>
+	</ol>
+</div>	
+	  
 	  
 	  <div class="container">
 <div class="row d-flex flex-wrap align-items-center" data-toggle="modal" data-target="#lightbox">
@@ -122,7 +136,10 @@
     </div>
   </div>
 </div>
-                         </div>
+  </div>
+
+
+				
 	  
 	  
 	  
