--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -39,7 +39,6 @@
 	  </div>
 	  
 	  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
 
 
 
@@ -59,7 +58,7 @@
 
 
 <ul class="blue-layer__list">
-	<li>3 adet yüzme havuzu (480 | 200 | 100 square meter)</li>
+	<li>3 adet yüzme havuzu (480 | 200 | 100 m² )</li>
 	<li>3 adet havuz barı</li>
 	<li>2 adet çocuk havuzu</li>
 	<li>Kapalı restaurant (Kapasite: 300)</li>
@@ -85,7 +84,7 @@
       <li class="nav-item"><a href="hakkimizda.html" class="nav-link px-2 text-muted">Hakkımızda</a></li>
       <li class="nav-item"><a href="odalar.html" class="nav-link px-2 text-muted">Odalar</a></li>
       <li class="nav-item"><a href="galeri.html" class="nav-link px-2 text-muted">Galeri</a></li>
-      <li class="nav-item"><a href="iletişim.html" class="nav-link px-2 text-muted">İletişim</a></li>
+      <li class="nav-item"><a href="iletisim.html" class="nav-link px-2 text-muted">İletişim</a></li>
     </ul>
     <p class="text-center text-muted">Copyright © 2021 Tüm Hakları Saklıdır.
 </p>
