--- a/iletisim.html
+++ b/iletisim.html
@@ -39,7 +39,6 @@
 	  </div>
 	  
 	  	  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
 
 
 
@@ -90,7 +89,7 @@ Ortaca / MUĞLA
       <li class="nav-item"><a href="hakkimizda.html" class="nav-link px-2 text-muted">Hakkımızda</a></li>
       <li class="nav-item"><a href="odalar.html" class="nav-link px-2 text-muted">Odalar</a></li>
       <li class="nav-item"><a href="galeri.html" class="nav-link px-2 text-muted">Galeri</a></li>
-      <li class="nav-item"><a href="iletişim.html" class="nav-link px-2 text-muted">İletişim</a></li>
+      <li class="nav-item"><a href="iletisim.html" class="nav-link px-2 text-muted">İletişim</a></li>
     </ul>
     <p class="text-center text-muted">Copyright © 2021 Tüm Hakları Saklıdır.
 </p>
